# sec-triage-ui

./: README.md
apps/backend/: pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: auth.py  errors.py
apps/backend/app/db/: mongo.py
apps/backend/app/models/: finding.py
apps/backend/app/routers/: findings.py
apps/backend/app/schemas/: finding.py
apps/backend/app/services/: finding_service.py  policy.py
apps/backend/tests/: test_findings_api.py
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  table.tsx
apps/frontend/src/features/auth/components/: Login.tsx  ProtectedRoute.tsx
apps/frontend/src/features/auth/contexts/: AuthContext.tsx
apps/frontend/src/features/triage/api/: httpFindingApi.ts  localStorageFindingApi.ts
apps/frontend/src/features/triage/components/: Component.test.tsx  FindingsTable.tsx  TriageDashboard.tsx  TriageFilters.tsx
apps/frontend/src/features/triage/data/: mockReports.ts
apps/frontend/src/features/triage/hooks/: useFindings.ts  useTriageFilters.ts
apps/frontend/src/features/triage/lib/: fingerprint.ts
apps/frontend/src/features/triage/mappers/: adapters.ts  backendFinding.ts
apps/frontend/src/features/triage/policy/: scoring.ts
apps/frontend/src/features/triage/types/: domain.ts
apps/frontend/src/lib/: firebase.ts
docs/: data-dictionary.md
